welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Missing closing brace `}' assumed here
var vuBiscuit : Boolean = false
^Program:3: error: expected class or object definition
var vuBiscuit : Boolean = false
^Program:6: error: expected class or object definition
def haveBaggle():Boolean = {
^