welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code


var vuBiscuit : Boolean = false


def haveBaggle():Boolean = {
  while (vuBiscuit!=true){
  for (i<- 1 to 6){
    avance()
    if (estSurBiscuit==true){
      vuBiscuit = true
    }
	droite();avance();gauche()
  }
}